--- a/oefening.html
+++ b/oefening.html
@@ -19,7 +19,7 @@
         User Experience (UX) focused on making your websites usable by the widest range of people possible, including
         those
         who
-        have disabilities.hup
+        have disabilities.
 
 
         Four categories of accessibility
