--- a/oefening.html
+++ b/oefening.html
@@ -12,88 +12,109 @@
 
 <body>
     <article>
-        
-        Accessibility is often viewed as making your site work on screen readers. In reality, web accessibility is a
-        subset
-        of
-        User Experience (UX) focused on making your websites usable by the widest range of people possible, including
-        those
-        who
-        have disabilities.
+
+        <div class="intro">
+
+            <p>
+                Accessibility is often viewed as making your site work on screen readers. In reality, web accessibility
+                is a
+                subset
+                of
+                User Experience (UX) focused on making your websites usable by the widest range of people possible,
+                including
+                those
+                who
+                have disabilities.
 
 
-        Four categories of accessibility
-        Accessibility can be broken down into four key categories:
+                Four categories of accessibility
+                Accessibility can be broken down into four key categories:
+
+
+            </p>
+        </div>
+
 
 
         <section>
 
 
-            <header>
+            <div class="visual">
+
                 <h2>Visual</h2>
-            </header>
-            <p>This can be non-sighted users, users with low-vision, users with obstructed vision, or even simply your
-                aging
-                parents.</p>
+                <p>This can be non-sighted users, users with low-vision, users with obstructed vision, or even simply
+                    your
+                    aging
+                    parents.</p>
 
-            <h3>Associated conditions</h3>
-            <ul>
-                <li>Myopia</li>
-                <li>Colour blindness</li>
-                <li>Glaucoma</li>
-                <li>Albinism</li>
-            </ul>
+                <h3>Associated conditions</h3>
+                <ul>
+                    <li>Myopia</li>
+                    <li>Colour blindness</li>
+                    <li>Glaucoma</li>
+                    <li>Albinism</li>
+                </ul>
 
-        </section>
-
-        <section>
-
-            <h2>Auditory</h2>
-            <p>The web is a visual medium, but captions and fallbacks for sound-necessary media need to be considered
-                for
-                hearing
-                impaired users.</p>
-
-            <h3>Associated conditions</h3>
-            <ul>
-                <li>Presbycusis</li>
-                <li>Acoustic trauma</li>
-                <li>Auditory processing disorder</li>
-                <li>Otosclerosis</li>
-            </ul>
+            </div>
 
         </section>
 
         <section>
+            <div class="auditory">
+                <h2>Auditory</h2>
+                <p>The web is a visual medium, but captions and fallbacks for sound-necessary media need to be
+                    considered
+                    for
+                    hearing
+                    impaired users.</p>
 
-            <h2>Motor</h2>
-            <p>People with motor impairments typically use a wide range of assistive technology from specialized
-                keyboards,
-                to eye
-                trackers, to using single buttons (a device known as a “switch”) to navigate their computers.</p>
+                <h3>Associated conditions</h3>
+                <ul>
+                    <li>Presbycusis</li>
+                    <li>Acoustic trauma</li>
+                    <li>Auditory processing disorder</li>
+                    <li>Otosclerosis</li>
+                </ul>
 
-            <h3>Associated conditions</h3>
-            <ul>
-                <li>RSI</li>
-                <li>Cerebral palsy</li>
-                <li>Parkinson’s</li>
-                <li>Muscliar dystrophy</li>
-            </ul>
+            </div>
+
 
         </section>
 
         <section>
+            <div class="motor">
+                <h2>Motor</h2>
+                <p>People with motor impairments typically use a wide range of assistive technology from specialized
+                    keyboards,
+                    to eye
+                    trackers, to using single buttons (a device known as a “switch”) to navigate their computers.</p>
 
-            <h2>Cognitive</h2>
-            <p>Relates to the ease processing of information.</p>
+                <h3>Associated conditions</h3>
+                <ul>
+                    <li>RSI</li>
+                    <li>Cerebral palsy</li>
+                    <li>Parkinson’s</li>
+                    <li>Muscliar dystrophy</li>
+                </ul>
 
-            <h3>Associated conditions</h3>
-            <ul>
-                <li>Down’s syndrome</li>
-                <li>Autism</li>
-                <li>Global developmental delay</li>
-                <li>Dyslexia</li>
-            </ul>
+            </div>
+
+        </section>
+
+        <section>
+            <div class="cognitive">
+
+                <h2>Cognitive</h2>
+                <p>Relates to the ease processing of information.</p>
+
+                <h3>Associated conditions</h3>
+                <ul>
+                    <li>Down’s syndrome</li>
+                    <li>Autism</li>
+                    <li>Global developmental delay</li>
+                    <li>Dyslexia</li>
+                </ul>
+            </div>
 
         </section>
 
@@ -108,7 +129,7 @@
 
         Robin Christopherson (an accessibility expert who is blind) once spoke about how people that are driving but use
         hands-free sets or have their phone connected to the car radio are temporarily disabled, as they use the phone
-        differently to how they normally wolid. Of course, no one sholid browse websites while they are driving but it
+        differently to how they normally would. Of course, no one should browse websites while they are driving but it
         is
         important to understand different situations like that, where the user may not have special software installed
         that
